Add shaders, bump library versions